--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -252,16 +252,16 @@ post-interaction measures. Participants were then thanked for their
 participation and debriefed Garcia et al. (2016). The full methodology
 used is found in Garcia et al. (2016)'s study.
 
-\subsection{Combining Samples}\label{combining-samples}
+\subsection{Combined Samples}\label{combined-samples}
 
 Data from two different, but demographically equivalent, samples were
 combined to create the final analysis sample (\emph{N =} 64) used in
 this study. In the measures section that follows we refer to them as
 Sample 1 and Sample 2. Sample 1 (\emph{N =} 24) is from a co-ed liberal
 arts college in the northeast US and Sample 2 (\emph{N =} 40) is from a
-women's liberal arts college in the northeast US. The results section
-contains more detail about equivalence analyses to support the decision
-to combine these two samples.
+women's liberal arts college in the northeast US. The description of the
+samples section below contains more detail about equivalence analyses to
+support the decision to combine these two samples.
 
 \begin{table}[tbp]
 \begin{center}
@@ -437,13 +437,18 @@ was collected from same-sex and mixed-sex dyads that comprised of male
 and female gendered individuals. Sample 1 originally consisted of
 twenty-two pairs, twelve men and thirty-two women. Twenty-three pairs
 made up of forty-three women and one man, as well as two participants
-who did not identify with either gender category, formed Sample 2. Due
-to similarities across samples in regard to correlation patterns between
-significant variables within this study, the two datasets were combined.
-For consistency, we limited participant data to same sex female pairs at
-the two colleges. These participants were mostly first-year college
-students, with an average age of 18.85 (SD = 1.04). The sample was
-48.44\% White/European American, 9.38\% Black/African-American, 28.12\%
+who did not identify with either gender category, formed Sample 2. For
+consistency, we limited participant data to same sex female pairs at the
+two colleges.
+
+There were some similar correaltions bewtween study variables across
+samples.
+
+Due these similarities across samples in regard to correlation patterns
+between significant variables within this study, the two datasets were
+combined. These participants were mostly first-year college students,
+with an average age of 18.85 (SD = 1.04). The sample was 48.44\%
+White/European American, 9.38\% Black/African-American, 28.12\%
 Asian/Pacific Islander, 9.38\% Latinx, and 4.69\% mixed-race. There were
 8 White/White pairs and 4 same race racial minority pairs, for a total
 of 12 same-race pairs. The remaining 20 were mixed race pairs, of which
@@ -546,7 +551,7 @@ test that provide support for combining Sample 1 and Sample 2 in one
 analysis sample. The online supplemental material contains the main
 analyses separated by samples.
 
-\subsubsection{Combining Samples}\label{combining-samples-1}
+\subsubsection{Combining Samples}\label{combining-samples}
 
 The correaltions between study variables is similar across samples. The
 realibialities for the study scales were also equivalent. (Note that the
